# AskRITA

./: .bumpversion.cfg  .gitignore  .gitleaks.toml  .gitleaksignore  .snyk  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Code_of_Conduct.md  Dockerfile.docs  Dockerfile.test  LICENSE  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.txt  mkdocs.yml  pyproject.toml  renovate.json  setup.py  test-python-versions.sh  tox.ini
.cursor/rules/: config-changes.mdc  development-standards.mdc  feature-development.mdc  release-workflow.mdc  testing-workflow.mdc
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yaml  docs.yaml  publish.yaml  security-canary.yaml
.windsurf/rules/: config-changes.md  development-standards.md  feature-development.md  release-workflow.md  testing-workflow.md
askrita/: __init__.py  cli.py  config_manager.py  exceptions.py  mcp_server.py
askrita/dataclassifier/: DataClassificationWorkflow.py  DataProcessor.py  Models.py  __init__.py
askrita/models/: __init__.py  chain_of_thoughts.py  recommendations.py  step_details.py
askrita/research/: ResearchAgent.py  SchemaAnalyzer.py  StatisticalAnalyzer.py  __init__.py
askrita/sqlagent/: State.py  __init__.py  graph_instructions.py  progress_tracker.py
askrita/utils/: LLMManager.py  __init__.py  chain_of_thoughts.py  constants.py  cot_config_validator.py  enhanced_chain_of_thoughts.py  llm_models.py  pii_detector.py  step_registry.py  token_utils.py
benchmarks/: __init__.py
benchmarks/bird/: README.md  __init__.py  __main__.py  evaluate.py  generate_chart.py  run_all_benchmarks.sh  run_benchmark.py  runner.py  setup_data.py
benchmarks/bird_interact/: README.md  __init__.py  __main__.py  evaluate.py  run_benchmark.py  runner.py  setup_data.py  user_simulator.py
docs/: index.md  installation.md  supported-platforms.md  usage-examples.md
docs/benchmarks/: gemini-25-flash-lite.md  gemini-25-flash.md  gemini-25-pro.md  gpt-54-mini.md  gpt-54-nano.md  gpt-54.md  guide.md  results.md
docs/charts/: README.md  angular-integration.md  bar-chart.md  calendar-chart.md  column-chart.md  combo-chart.md  gauge-chart.md  geo-chart.md  histogram-chart.md  line-chart.md  pie-chart.md  react-integration.md  sankey-chart.md  scatter-chart.md  table-chart.md  timeline-chart.md  treemap-chart.md
docs/configuration/: database.md  examples.md  llm-providers.md  overview.md  pii-detection.md  schema-descriptions.md  security.md  troubleshooting.md  (+1 more)
example-configs/: data-classification-azure.yaml  data-classification-csv-examples.yaml  data-classification-general.yaml  data-classification-openai.yaml  data-classification-vertex-ai.yaml  example-zscaler-config.yaml  mcp-server-config.yaml  query-azure-openai.yaml  query-bedrock.yaml  query-bigquery-advanced.yaml  query-bigquery-pii.yaml  query-bigquery.yaml  query-db2.yaml  query-minimal.yaml  query-mongodb.yaml  query-openai.yaml  query-pii-detection.yaml  query-snowflake.yaml  query-vertex-ai-gcloud.yaml  query-vertex-ai.yaml  query-with-custom-sql-syntax.yaml  schema-descriptions-simple.yaml
scripts/: generate_benchmark_assets.py  generate_chart_assets.py  manage_version.py  validate_dependencies.py
tests/: __init__.py  conftest.py  test_bird_stratified_sample.py  test_chain_of_thoughts.py  test_chain_of_thoughts_models.py  test_chart_generator.py  test_chart_generator_extended.py  test_clarification_flow.py  test_cli.py  test_config_manager.py  test_config_manager_comprehensive.py  test_config_manager_extended2.py  test_config_manager_missing_lines.py  test_core_exporter_extended.py  test_cot_config_validator.py  test_coverage_boost_batch1.py  test_coverage_boost_batch2.py  test_coverage_boost_batch3.py  test_data_formatter.py  test_database_manager.py  test_database_manager_coverage.py  test_database_manager_functional.py  test_database_manager_methods.py  test_database_strategies.py  test_database_strategies_simple.py  test_enhanced_chain_of_thoughts.py  test_excel_exporter_extended.py  test_exporters.py  test_graph_instructions.py  test_langgraph_callback_handler.py  test_llm_manager.py  test_llm_manager_extended.py  test_llm_manager_missing_lines.py  test_llm_models.py  test_nosql_agent_workflow_pure_logic.py  test_nosql_database_manager.py  test_nosql_strategies.py  test_nosql_workflow.py  test_pii_detection.py  test_progress_tracking.py  (+19 more)
(+37 files in other folders)
