[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Code formatting and quality tools
[tool.black]
line-length = 88
target-version = ['py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
disable_error_code = ["attr-defined", "assignment", "return-value", "arg-type", "override", "abstract", "dict-item", "index", "import-untyped", "call-overload", "misc", "union-attr", "var-annotated", "import-not-found", "operator", "call-arg"]

[tool.coverage.run]
source = ["askrita"]
omit = [
    "*/tests/*", 
    "*/test_*",
    "*/mcp_server.py",
    "*/dataclassifier/*",
    "*/sample_apps/*"
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.poetry]
name = "askrita"
version = "0.13.13"
description = "Reasoning Interface for Text-to-Analytics (RITA) - Natural language SQL and NoSQL (MongoDB) query interface powered by LangChain and LLMs"
authors = ["AskRITA Contributors"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/cvs-health/askRITA"
repository = "https://github.com/cvs-health/askRITA"
documentation = "https://github.com/cvs-health/askRITA#readme"

packages = [{include = "askrita"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langchain-core = ">=1.0.0"
langchain-community = ">=0.4.1"
langchain-openai = ">=1.0.0"
langchain-google-vertexai = ">=3.0.0"
langchain-aws = ">=1.0.0"
langgraph = ">=1.0.0"
langchain-mongodb = "^0.11.0"
sqlalchemy = ">=2.0.0"
psycopg2-binary = ">=2.9.0"
pymysql = ">=1.1.0"
sqlalchemy-bigquery = ">=1.10.0"
snowflake-sqlalchemy = ">=1.7.7"
google-cloud-bigquery = ">=3.10.0"
azure-identity = ">=1.15.0"
pandas = ">=2.0.0"
db-dtypes = ">=1.0.0"
pyarrow = ">=21.0.0"
snowflake-connector-python = ">=3.18.0"

requests = ">=2.30.0"
pyyaml = ">=6.0.0"
pydantic = ">=2.0.0"
mcp = ">=1.0.0"
starlette = ">=0.49.1"  # Floor pin: CVE ReDoS vulnerability in starlette < 0.49.1 (transitive via mcp)
presidio-analyzer = { version = ">=2.2.360", python = "<3.14" }  # PHI/PII detection and privacy protection

# Optional export dependencies
python-pptx = ">=0.6.21"
reportlab = ">=4.0.0"
matplotlib = ">=3.7.0"
xlsxwriter = ">=3.0.0"
scipy = "^1.16.3"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.8.0"
black = ">=22.0.0"
isort = ">=5.10.0"
flake8 = ">=5.0.0"
mypy = ">=0.991"
types-requests = ">=2.25.0"
types-pyyaml = ">=6.0.0"
pre-commit = ">=2.20.0"
bandit = ">=1.7.0"
pip-audit = ">=2.5.0"
ipython = ">=7.30.0"
tox = ">=3.25.0"
bump2version = ">=1.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0"
mkdocs-material = ">=9.0.0"
termynal = ">=0.12.0"
mkdocstrings = {extras = ["python"], version = ">=0.20.0"}

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-mock = ">=3.8.0"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
tabulate = ">=0.9.0"
pygraphviz = ">=1.10"

[tool.poetry.extras]
exports = ["python-pptx", "reportlab", "matplotlib", "xlsxwriter"]
examples = ["tabulate", "pygraphviz"]

[tool.poetry.scripts]
askrita = "askrita.cli:main"
version-show = "scripts.manage_version:show_version"
version-bump = "scripts.manage_version:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config" 
